add schema info to model

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,4 +1,19 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: orders
+#
+#  id            :bigint           not null, primary key
+#  address       :string(255)
+#  payment_way   :integer
+#  potal_code    :string(255)
+#  receiver_name :string(255)
+#  shipping_fee  :integer
+#  status        :integer          default(0)
+#  total_price   :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  user_id       :integer
+#
 
 one:
   user_id: 1
