--- a/test/fixtures/cart_items.yml
+++ b/test/fixtures/cart_items.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: cart_items
+#
+#  id         :bigint           not null, primary key
+#  number     :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  item_id    :integer
+#  user_id    :integer
+#
 
 one:
   user_id: 1
