--- a/test/fixtures/genres.yml
+++ b/test/fixtures/genres.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: genres
+#
+#  id         :bigint           not null, primary key
+#  has_genre  :boolean          default(FALSE), not null
+#  title      :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   title: MyString
