--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,4 +1,17 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: items
+#
+#  id              :bigint           not null, primary key
+#  has_item        :boolean          default(FALSE), not null
+#  introduction    :text(65535)
+#  name            :string(255)
+#  non_taxed_price :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#  genre_id        :integer
+#  image_id        :string(255)
+#
 
 one:
   genre_id: 1
