--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: order_items
+#
+#  id            :bigint           not null, primary key
+#  making_status :integer          default(0)
+#  number        :integer
+#  taxed_price   :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  item_id       :integer
+#  order_id      :integer
+#
 
 one:
   order_id: 1
