--- a/test/fixtures/shopping_addresses.yml
+++ b/test/fixtures/shopping_addresses.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: shopping_addresses
+#
+#  id            :bigint           not null, primary key
+#  address       :string(255)
+#  postal_code   :string(255)
+#  receiver_name :string(255)
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  user_id       :integer
+#
 
 one:
   user_id: 1
