--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,14 @@
 version: '3'
 services:
+  db:
+    image: mysql:5.7
+    volumes:
+      - db-volume:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: password
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm -f tmp/pids/server.pid && bundle install && bundle exec rake db:create && bundle exec rails s -b 0.0.0.0 -p 3000"
     volumes:
       - .:/app
     ports:
@@ -11,11 +17,14 @@ services:
       - db
     tty: true
     stdin_open: true
-  db:
-    image: mysql:5.7
-    volumes:
-      - db-volume:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: password
+  # front:
+  #   build:
+  #     context: ./front/
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - .:/app
+  #   command: sh -c "cd react-sample && yarn start"
+  #   ports:
+  #     - "8000:3000"
 volumes:
   db-volume:
